# mechanics-class-simulation

./: .gitignore  .nojekyll  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Justfile  README.md  SECURITY.md  index.html  mise.toml  package-lock.json  package.json  pyproject.toml  search.json  snapshot-anim.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  publish.yml
docs/: quarto-live.md
exercises/: polar_kinematics.html
quarto/: _quarto.yml  index.qmd  preamble.tex
quarto/exercises/: polar_kinematics.qmd
quarto/simulations/: pendulum.qmd
quarto/templates/: cleanup-shinylive-sw.html  math_focused_template.qmd  plotly-loader.html  quarto_feature_showcase.qmd  references.bib  sidebar-toggle.html  sidebar-toggle.js  textbook_template.qmd  theorem_proof_template.qmd  theory_template.qmd  topic_template.qmd
quarto/textbook/: _01_intro_notation.qmd  _01_introduction.qmd  _02_chapter.qmd  _02_particle_mechanics.qmd  _03_interactive_demo.qmd  _03_rigid_body.qmd  _04_analytical_mechanics.qmd  _04_plotly_demo.qmd  textbook.qmd
quarto/theory/: textbook.qmd
quarto/theory/topics/exercises/: polar_kinematics.qmd
quarto/theory/topics/simulations/: sample.qmd
research/inbox/: manifest.yml
scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh
simulations/: pendulum.html
site_libs/bootstrap/: bootstrap-c0f88a11ff41682bc4a68e0c9d566e7e.min.css  bootstrap-f57d11532290d8ef44d35aa1dbbccd91.min.css
templates/: styles.css
tests/: test_placeholder.py
textbook/: textbook.html
theory/: textbook.html
theory/topics/exercises/: polar_kinematics.html
theory/topics/simulations/: sample.html
tools/: README.md  check_env.py  clean.py  dev_server.py  extract_pdf.py  kill_quarto_process.py  render_pdf.py  validate_docs.py
tools/utils/: find_quarto.py  latex_extraction.py  mermaid_parser.js  pdf_processing.py  quarto_watcher.py
