[project]
name = "mechanics-class-simulation"
version = "0.1.0"
description = "Quarto notes and simulations for Fundamentals of Physics A (Mechanics)."
authors = [
    { name = "Daisuke Yamashiki" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "htmltools>=0.6.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pymupdf>=1.25.0",
    "shiny>=1.6.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
